--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,87 @@ data/TUDataset/MUTAG/raw/MUTAG_graph_indicator.txt
 data/TUDataset/MUTAG/raw/MUTAG_graph_labels.txt
 data/TUDataset/MUTAG/raw/MUTAG_node_labels.txt
 data/TUDataset/MUTAG/raw/README.txt
+data/GeometricShapes/processed/pre_filter.pt
+data/GeometricShapes/processed/pre_transform.pt
+data/GeometricShapes/processed/test.pt
+data/GeometricShapes/processed/training.pt
+data/GeometricShapes/raw/2d_circle/test/2d_circle.off
+data/GeometricShapes/raw/2d_circle/train/2d_circle.off
+data/GeometricShapes/raw/2d_ellipse/test/2d_ellipse.off
+data/GeometricShapes/raw/2d_ellipse/train/2d_ellipse.off
+data/GeometricShapes/raw/2d_moon/test/2d_moon.off
+data/GeometricShapes/raw/2d_moon/train/2d_moon.off
+data/GeometricShapes/raw/2d_pacman/test/2d_pacman.off
+data/GeometricShapes/raw/2d_pacman/train/2d_pacman.off
+data/GeometricShapes/raw/2d_plane/test/2d_plane.off
+data/GeometricShapes/raw/2d_plane/train/2d_plane.off
+data/GeometricShapes/raw/2d_semicircle/test/2d_semicircle.off
+data/GeometricShapes/raw/2d_semicircle/train/2d_semicircle.off
+data/GeometricShapes/raw/2d_trapezoid/test/2d_trapezoid.off
+data/GeometricShapes/raw/2d_trapezoid/train/2d_trapezoid.off
+data/GeometricShapes/raw/2d_triangle/test/2d_triangle.off
+data/GeometricShapes/raw/2d_triangle/train/2d_triangle.off
+data/GeometricShapes/raw/3d_chimney_3/test/3d_chimney_3.off
+data/GeometricShapes/raw/3d_chimney_3/train/3d_chimney_3.off
+data/GeometricShapes/raw/3d_chimney_4/test/3d_chimney_4.off
+data/GeometricShapes/raw/3d_chimney_4/train/3d_chimney_4.off
+data/GeometricShapes/raw/3d_cone/test/3d_cone.off
+data/GeometricShapes/raw/3d_cone/train/3d_cone.off
+data/GeometricShapes/raw/3d_cube/test/3d_cube.off
+data/GeometricShapes/raw/3d_cube/train/3d_cube.off
+data/GeometricShapes/raw/3d_cup/test/3d_cup.off
+data/GeometricShapes/raw/3d_cup/train/3d_cup.off
+data/GeometricShapes/raw/3d_cylinder/test/3d_cylinder.off
+data/GeometricShapes/raw/3d_cylinder/train/3d_cylinder.off
+data/GeometricShapes/raw/3d_dome/test/3d_dome.off
+data/GeometricShapes/raw/3d_dome/train/3d_dome.off
+data/GeometricShapes/raw/3d_hexagon/test/3d_hexagon.off
+data/GeometricShapes/raw/3d_hexagon/train/3d_hexagon.off
+data/GeometricShapes/raw/3d_icecream/test/3d_icecream.off
+data/GeometricShapes/raw/3d_icecream/train/3d_icecream.off
+data/GeometricShapes/raw/3d_ico/test/3d_ico.off
+data/GeometricShapes/raw/3d_ico/train/3d_ico.off
+data/GeometricShapes/raw/3d_ico2/test/3d_ico2.off
+data/GeometricShapes/raw/3d_ico2/train/3d_ico2.off
+data/GeometricShapes/raw/3d_L_cylinder/test/3d_L_cylinder.off
+data/GeometricShapes/raw/3d_L_cylinder/train/3d_L_cylinder.off
+data/GeometricShapes/raw/3d_monkey/test/3d_monkey.off
+data/GeometricShapes/raw/3d_monkey/train/3d_monkey.off
+data/GeometricShapes/raw/3d_moon/test/3d_moon.off
+data/GeometricShapes/raw/3d_moon/train/3d_moon.off
+data/GeometricShapes/raw/3d_pacman/test/3d_pacman.off
+data/GeometricShapes/raw/3d_pacman/train/3d_pacman.off
+data/GeometricShapes/raw/3d_pentagon/test/3d_pentagon.off
+data/GeometricShapes/raw/3d_pentagon/train/3d_pentagon.off
+data/GeometricShapes/raw/3d_pill/test/3d_pill.off
+data/GeometricShapes/raw/3d_pill/train/3d_pill.off
+data/GeometricShapes/raw/3d_pipe/test/3d_pipe.off
+data/GeometricShapes/raw/3d_pipe/train/3d_pipe.off
+data/GeometricShapes/raw/3d_pyramid_3_asy/test/3d_pyramid_3_asy.off
+data/GeometricShapes/raw/3d_pyramid_3_asy/train/3d_pyramid_3_asy.off
+data/GeometricShapes/raw/3d_pyramid_3_asym/test/3d_pyramid_3_asym.off
+data/GeometricShapes/raw/3d_pyramid_3_asym/train/3d_pyramid_3_asym.off
+data/GeometricShapes/raw/3d_pyramid_3_asym2/test/3d_pyramid_3_asym2.off
+data/GeometricShapes/raw/3d_pyramid_3_asym2/train/3d_pyramid_3_asym2.off
+data/GeometricShapes/raw/3d_pyramid_4_asym/test/3d_pyramid_4_asym.off
+data/GeometricShapes/raw/3d_pyramid_4_asym/train/3d_pyramid_4_asym.off
+data/GeometricShapes/raw/3d_pyramid_4_asym2/test/3d_pyramid_4_asym2.off
+data/GeometricShapes/raw/3d_pyramid_4_asym2/train/3d_pyramid_4_asym2.off
+data/GeometricShapes/raw/3d_pyramid_4_sym/test/3d_pyramid_4_sym.off
+data/GeometricShapes/raw/3d_pyramid_4_sym/train/3d_pyramid_4_sym.off
+data/GeometricShapes/raw/3d_rotated_cube/test/3d_rotated_cube.off
+data/GeometricShapes/raw/3d_rotated_cube/train/3d_rotated_cube.off
+data/GeometricShapes/raw/3d_rotated_hexagon/test/3d_rotated_hexagon.off
+data/GeometricShapes/raw/3d_rotated_hexagon/train/3d_rotated_hexagon.off
+data/GeometricShapes/raw/3d_sphere/test/3d_sphere.off
+data/GeometricShapes/raw/3d_sphere/train/3d_sphere.off
+data/GeometricShapes/raw/3d_torus/test/3d_torus.off
+data/GeometricShapes/raw/3d_torus/train/3d_torus.off
+data/GeometricShapes/raw/3d_torus_fat/test/3d_torus_fat.off
+data/GeometricShapes/raw/3d_torus_fat/train/3d_torus_fat.off
+data/GeometricShapes/raw/3d_U_cylinder/test/3d_U_cylinder.off
+data/GeometricShapes/raw/3d_U_cylinder/train/3d_U_cylinder.off
+data/GeometricShapes/raw/3d_wedge/test/3d_wedge.off
+data/GeometricShapes/raw/3d_wedge/train/3d_wedge.off
+data/GeometricShapes/raw/3d_wedge_long/test/3d_wedge_long.off
+data/GeometricShapes/raw/3d_wedge_long/train/3d_wedge_long.off
